<resources>
    <string name="app_name">TextRecognition</string>
    <string name="choosePic">choose a picture</string>
    <string name="camera">camera</string>
    <string name="textShow">Find text and show</string>
    <string name="textSave">Find text and save</string>
    <string name="contentDescription">Image to find text in</string>
    <string name="inputUrl">Image from URL</string>
    <string name="openText">Open recognized text</string>
    <string name="error">Error, please try again!</string>
    <string name="enterValidURL">Please enter a valid URL!</string>
    <string name="downloadingImage">Downloading image</string>
    <string name="waitForFinish">Please wait, we are downloading your image file ...</string>
</resources>