<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_choosePic"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/contentDescription"/>

    <Button
            android:id="@+id/button_choosePic"
            android:text="@string/choosePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toTopOf="@id/button_camera"
            app:layout_constraintRight_toLeftOf="parent" android:backgroundTint="#FF0000"/>

    <Button
            android:id="@+id/button_camera"
            android:text="@string/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toTopOf="@id/button_text"
            app:layout_constraintLeft_toRightOf="parent" android:backgroundTint="#FFEB3B"/>

    <Button
            android:id="@+id/button_text"
            android:text="@string/textShow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toTopOf="@id/button_textSave"
            app:layout_constraintLeft_toRightOf="parent" android:backgroundTint="#A4AEE6"/>

    <Button
            android:id="@+id/button_textSave"
            android:text="@string/textSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>